Temporary styling imporvements for mobile screens to prevent overflow from animation

--- a/app/styles/_keyframes.scss
+++ b/app/styles/_keyframes.scss
@@ -99,19 +99,19 @@
 
 @keyframes carouselLeft {
   0% {
-    transform: translateX(-170%);
+    transform: translateX(40%);
   }
   100% {
-    transform: translateX(170%);
+    transform: translateX(-40%);
   }
 }
 
 @keyframes carouselRight {
   0% {
-    transform: translateX(190%);
+    transform: translateX(-40%);
   }
   100% {
-    transform: translateX(-200%);
+    transform: translateX(40%);
   }
 }
 
