--- a/app/styles/accoricDashcard.module.scss
+++ b/app/styles/accoricDashcard.module.scss
@@ -3,94 +3,89 @@
 
 .accoricDashcard {
   background-color: #fafafa;
-  padding-bottom: 1rem;
-  min-height: 100vh;
+  padding-bottom: 100vh;
+  position: relative;
   &__header {
-    max-width: 100vw;
-    overflow-x: hidden;
-    &__span {
-      position: absolute;
-      top: 25vh;
-      left: 10%;
+    height: 90vh;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 5;
+    overflow: hidden;
+    &__h2, &__h1 {
+      display: flex;
+      gap: 10vw;
       font-size: clamp(2rem, 10vw, 7rem);
       font-weight: 700;
-      text-shadow:
-        16ch 0 5px v.$heading-black-1,
-        -16ch 0 5px v.$heading-black-1,
-        -32ch 0 0px v.$heading-black-2,
-        32ch 0 0px v.$heading-black-2,
-        50ch 0 5px v.$heading-black-2,
-        -50ch 0 0 v.$heading-black-2;
-      color: v.$heading-black-1;
-      animation: 30s linear alternate infinite carouselLeft;
+      text-wrap: nowrap;
+      padding-bottom: 5vh;
+      span {
+        text-wrap: nowrap;
+        text-shadow: 0px 3px 0px #b2a98f,
+        0px 14px 10px rgba(0,0,0,0.15),
+        0px 24px 2px rgba(0,0,0,0.1),
+        0px 34px 30px rgba(0,0,0,0.1);
+      }
     }
     &__h1 {
+      color: #ffefc0;
+      margin-bottom: 5vh;
       z-index: 4;
-      position: absolute;
-      top: 70vh;
-      left: 10%;
-      font-size: clamp(2rem, 10vw, 7rem);
-      font-weight: 700;
-      text-shadow:
-        25ch 0 0 v.$heading-black-2,
-        -25ch 0 0 v.$heading-black-2,
-        -50ch 0 5px v.$heading-black-1,
-        50ch 0 5px v.$heading-black-1,
-        75ch 0 0 v.$heading-black-2,
-        -75ch 0 0 v.$heading-black-2;
-      color: v.$heading-black-1;
-      animation: 40s linear alternate infinite carouselRight;
+      animation: 35s linear alternate infinite carouselLeft;
     }
-  }
-  section {
-    height: 150vh;
-    display: flex;
-    flex-direction: column;
+    &__h2 {
+      margin-top: 5vh;
+      animation: 35s linear alternate infinite carouselRight;
+    }
 
-    gap: 2rem;
-    z-index: 1;
-
-    h2 {
-      margin-top: 10%;
-      margin-bottom: 10%;
-      position: sticky;
-      top: 20%;
-      text-align: center;
-      font-size: 3rem;
-      font-weight: 800;
-      text-shadow: -3px 3px 0 0 rgb(255, 255, 255);
-      color: v.$site-secondary-color;
-      z-index: 3;
-    }
-  }
-  section:nth-child(even) {
-    background-color: #b0dfff;
-  }
-  section:nth-child(7) {
-    h2 {
-      margin-bottom: 45%;
-    }
   }
 }
-.accoricDashcard__spline {
+.accoricDashcard__splineContainer {
   position: sticky;
-  top: 10vh;
-  left: 0;
+  position: -webkit-sticky;
+  top: 10%;
+  width: 100%;
+  height: 100vh;
   z-index: 2;
-  max-height: 100vh;
-  margin-bottom: 10%;
-  @media (max-width: v.$tablet-breakpoint) {
-    top: 30vh;
-    margin-bottom: 20%;
-  }
+  margin-bottom: -100vh;
 }
 
+//   section {
+//     height: 150vh;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 2rem;
+//     z-index: 1;
 
-.accoricDashcard__videoPlayer {
-  margin-left: 5%;
-  width: 35vw;
-  height: 35vh;
-  z-index: 2;
-}
+//     h2 {
+//       margin-top: 10%;
+//       margin-bottom: 10%;
+//       position: sticky;
+//       top: 20%;
+//       text-align: center;
+//       font-size: 3rem;
+//       font-weight: 800;
+//       text-shadow: -3px 3px 0 0 rgb(255, 255, 255);
+//       color: v.$site-secondary-color;
+//       z-index: 3;
+//     }
+//   }
+//   section:nth-child(even) {
+//     background-color: #b0dfff;
+//   }
+//   section:nth-child(7) {
+//     h2 {
+//       margin-bottom: 45%;
+//     }
+//   }
+// }
+
+// .accoricDashcard__videoPlayer {
+//   margin-left: 5%;
+//   width: 35vw;
+//   height: 35vh;
+//   z-index: 2;
+// }
 
 
